# mlx-llm-api

./: .gitignore  README.md  env.example  main.py  pyproject.toml
backend/app/: models.py
backend/app/api/: router.py
backend/app/api/endpoints/: completions.py
backend/app/core/: middleware.py
backend/app/services/: mlx_service.py
frontend/: main.py
src/: main.py
src/app/: application.py  config.py  models.py
src/app/api/: router.py
src/app/api/endpoints/: audio.py  chat.py  completions.py  embeddings.py  health.py  models.py
src/app/core/: dependencies.py  exceptions.py  middleware.py
src/app/services/: mlx_service.py
src/frontend/: main.py
