[project]
name = "mlx-llm-api"
version = "0.1.0"
description = "OpenAI compatible API for MLX-LM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audio-recorder-streamlit>=0.0.8",
    "fastapi>=0.116.1",
    "kittentts",
    "librosa>=0.11.0",
    "mlx>=0.28.0",
    "mlx-embeddings>=0.0.3",
    "mlx-lm>=0.26.3",
    "mlx-whisper>=0.4.2",
    "openai>=1.99.3",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydantic-settings>=2.10.1",
    "pydub>=0.25.1",
    "python-multipart>=0.0.10",
    "soundfile>=0.13.0",
    "streamlit>=1.48.0",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
kittentts = { url = "https://github.com/KittenML/KittenTTS/releases/download/0.1/kittentts-0.1.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "ruff>=0.12.8",
    "watchdog>=6.0.0",
]
